...
                
                // Height section ------------
                HStack {
                    Text("Height: ")
                        .bold()
                    Text("\(pokemon.height)")
                        .accessibilityIdentifier("heightLabel")
                }
                .padding(.bottom)
                .padding(.horizontal)
                
                
                // Weight section ------------
...
                Text("Stats")
                    .padding(.horizontal)
                    .bold()
                StatsView(pokemon: pokemon)
                
                // Abilities section ------------
                DisclosureGroup("Abilities", isExpanded: $abilitiesExpanded) {
                    LazyVGrid(columns: Array(repeating: GridItem(.flexible()), count: 2), spacing: 20) {
                        ForEach(pokemon.abilities, id: \.self) { ability in
                            Text(ability.capitalized)
                                .fontWeight(.regular)
                                .padding()
                                .frame(maxWidth: .infinity, alignment: .leading)
...
