...
                                }
                            }
                        }
                    }
                }
            }
            .navigationTitle("Pokédex")
            .searchable(text: $searchText, prompt: "Search by name")
            .autocorrectionDisabled()
            .animation(.default, value: searchText)
        }
        .task {
            viewModel.fetchPokemon()
...
